--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,18 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# yarn v2
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
+
+# Others
+.DS_Store
+build
+package-lock.json
