--- a/typescript-string-and-literal-union/tsconfig.json
+++ b/typescript-string-and-literal-union/tsconfig.json
@@ -1,3 +1,13 @@
 {
-  "extends": "@tsconfig/recommended/tsconfig.json"
+  "compilerOptions": {
+    "noEmit": true,
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "lib": ["ESNext", "DOM", "DOM.Iterable"]
+  },
+  "exclude": ["node_modules"]
 }
