--- a/react-window-alert-confirm-prompt/package.json
+++ b/react-window-alert-confirm-prompt/package.json
@@ -3,15 +3,28 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "vite"
+    "start": "react-scripts start"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "dependencies": {
-    "@types/react": "^17.0.29",
-    "@types/react-dom": "^17.0.9",
-    "@vitejs/plugin-react": "^1.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.4.4",
-    "vite": "^2.6.7"
+    "react-scripts": "^4.0.3"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.29",
+    "@types/react-dom": "^17.0.9",
+    "typescript": "^4.4.4"
   }
 }
